--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
+Brackeys 2022.1/Library
+Brackeys 2022.1/Temp
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
